# AXIM

./: .env.example  .gitignore  DEMO_CHECKLIST.md  DEPLOYMENT.md  FIRST_TRADE.md  INSTALL.md  LIVE_CHECKLIST.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  axim_reader.py  money_studio_v2.py  preview_server.py  requirements.txt  seed_preview_funds.py  seed_preview_signals.py
api/: admin.py  auth_routes.py  backtest_routes.py  backups.py  billing_routes.py  bots_routes.py  broker_accounts_routes.py  capital_recommendation_routes.py  capital_strategies_routes.py  event_stream_routes.py  funds_routes.py  main.py  money_studio_routes.py  notifications.py  process_control.py  provider_onboarding_routes.py  provider_profile_routes.py  risk_engine_routes.py  rules.py  sessions.py  signal_pipeline_routes.py  telegram_admin.py  trades.py
archive/: axim_emma_reader.py  test_telegram.py
axim-desktop/: README.md  package-lock.json  package.json
axim-desktop/src-tauri/: Cargo.toml  tauri.conf.json
axim-desktop/src-tauri/icons/: icon.icns
axim-desktop/src-tauri/src/: lib.rs  main.rs
brand/: README.md
config/: assets.py  settings.py
core/: ai_analysis.py  auth.py  backtest_engine.py  billing.py  broker_account_manager.py  capital_recommendation.py  capital_strategies.py  capital_strategies_catalog.py  daily_compounding.py  dashboard_server.py  database.py  email_sender.py  event_bus.py  event_stream.py  fund_manager.py  latency.py  log_reader.py  logger.py  money_studio.py  provider_language_learner.py  provider_onboarding.py  provider_profile.py  provider_reanalysis.py  recovery.py  risk_control_center.py  risk_engine.py  risk_manager.py  rule_engine.py  secrets_store.py  session_manager.py  signal_assembler.py  signal_lifecycle.py  source_observer.py  source_profiler.py  telegram_bot_trigger.py  telegram_channels.py  telegram_listener.py  timeline.py  timeline_report.py  trade_coordinator.py  (+3 more)
dashboard/: index.html
docs/: AXIM_APP_PLAN.md  AXIM_CAPITAL_STRATEGIES.md  AXIM_COMPETITIVE_BENCHMARK.md  AXIM_DEMO_VALIDATION_CHECKLIST.md  AXIM_ENGINEERING_JOURNAL.md  AXIM_LATENCY_SPRINT.md  (+19 more)
(+179 files in other folders)
