[package]
name = "axim-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "axim_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# "bundled" statically links SQLite (no system SQLite dependency/version
# coupling) - used only to read core/database.py's ui_listener_heartbeat
# table before spawning local-mode processes, same self-reported
# "is the listener alive right now" freshness check api/main.py's own
# pocket_option_status endpoint already trusts.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

